Fix for payara-embedded. #9