@@ -12,6 +12,7 @@ mvn clean install -Darq-mode=weld-se -am
 
 ```bash
 export JAVA_TOOL_OPTIONS="-Djdk.util.zip.disableZip64ExtraFieldValidation=true \
+-Djdk.attach.allowAttachSelf=true \
 --add-opens=java.base/java.io=ALL-UNNAMED"
 
 mvn clean install -am
@@ -21,6 +22,7 @@ mvn clean install -am
 
 ```bash
 export JAVA_TOOL_OPTIONS="-Djdk.util.zip.disableZip64ExtraFieldValidation=true \
+-Djdk.attach.allowAttachSelf=true \
 --add-opens=java.base/java.io=ALL-UNNAMED"
 
 mvn clean install -Darq-mode=payara-micro -am
@@ -30,10 +32,12 @@ mvn clean install -Darq-mode=payara-micro -am
 
 ```bash
 export JAVA_TOOL_OPTIONS="-Djdk.util.zip.disableZip64ExtraFieldValidation=true \
+-Djdk.attach.allowAttachSelf=true \
 --add-opens=java.base/java.io=ALL-UNNAMED \
 --add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED \
 --add-opens=java.base/java.net=ALL-UNNAMED \
---add-opens=java.naming/javax.naming.spi=ALL-UNNAMED"
+--add-opens=java.naming/javax.naming.spi=ALL-UNNAMED \
+--add-opens=java.base/java.lang=ALL-UNNAMED \"
 
 mvn clean install -Darq-mode=payara-embedded -am
 ```
